<resources>
    <string name="app_name">SubmissionAndroidBeginnner</string>
    <string name="news_title">News Title</string>
    <string name="by">by</string>
    <string name="penulis">Penulis</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="wahyuddin">Wahyuddin</string>
    <string name="email">wahyuudin2811@gmail.com</string>
    <string name="image_description">Image Content</string>
    <string-array name="list_news_title">
        <item>Konser Kpop di Penutupan Jambore Dunia. Hibur Peserta, Kembalikan Citra Baik Korea</item>
        <item>Serangan ISIS Mengerikan: Bus Tentara Suriah Dihantam Tembakan Mematikan, 33 Korban Jiwa Gugur</item>
        <item>Inilah Amadeo, Peraih Nilai UTBK Tertinggi 2023 yang Sempat Gagal SNBP/</item>
        <item>Ukir Prestasi Tingkat Nasional, Wisata Mangrove Kedatim di Sumenep Punya Keindahan yang Menakjubkan</item>
        <item>Viral Kakek Lecehkan Siswi SD di Jaktim, Pelaku Langsung Digulung Polisi</item>
        <item>Waduh, Aktor Ini Sampai Harus Jual Rumah Gara-gara Aksi Mogok Kerja Aktor dan Penulis Hollywood</item>
        <item>Didukung PAN dan Golkar, Prabowo: Saya Tak akan Kecewakan Harapan Partai</item>
        <item>Polisi Akui Macet diJakarta Makin Parah, Indeksnya Capai 53 Persen</item>
        <item>Kisah Model Seksi Pengidap Lipoedema, Penyakit Langka Bikin Pahanya Besar tapi Badan Langsing</item>
        <item>Sebagai Bentuk Komitmen Kembangkan Parawisata, Sandiaga Uno Beri Bantuan DPUP ke 5 Desa di Jabar</item>
    </string-array>
    <string-array name="list_news_writer">
        <item>Editor Indo Times ArtNet</item>
        <item>Editor Indo Times ArtNet</item>
        <item>Trisna Wulandari</item>
        <item>Deni Agustian</item>
        <item>Samsudhuha Wildansyah</item>
        <item>Ananda Fachreza Lubis</item>
        <item>Victor Median</item>
        <item>Samsudhuha Wildansyah</item>
        <item>Putri Surya Ningsih</item>
        <item>Mochamad Rezhatama Herdanu</item>
    </string-array>
    <string-array name="list_news_date">
        <item>- August 12, 2023</item>
        <item>- August 12, 2023</item>
        <item>- August 10, 2023</item>
        <item>- August 13, 2023</item>
        <item>- August 12, 2023</item>
        <item>- August 13, 2023</item>
        <item>- August 13, 2023</item>
        <item>- August 13, 2023</item>
        <item>- August 12, 2023</item>
        <item>- August 12, 2023</item>
    </string-array>
    <string-array name="list_news_description">
        <item>Salah satu peserta Jambore Dunia yang mewakili Indonesia, Arya Arganta Ayudianto, berbagi pengalaman bagaimana antusiasme begitu tinggi pada saat pembukaan. Banyak peserta bergerak menuju lokasi acara dengan semangat. Namun ironisnya, ini juga menyebabkan beberapa peserta terpisah dari kontingen mereka masing-masing. Arya berkisah, “Saat acara pembukaan WSJ 23, semua peserta dari berbagai negara bergerak menuju arena utama, sebuah taman luas dengan panggung yang megah. Namun, dalam kerumunan ini, terjadi konfrontasi dan sebagian peserta terpisah dari kelompok negaranya.” Kekecewaan tidak hanya terbatas pada hal tersebut. Acara yang seharusnya penuh kegembiraan berubah menjadi kekecewaan ketika acara tersebut dieksploitasi oleh politisi untuk menyampaikan pidato-pidato mereka. “Kami merasa kecewa dengan acara pembukaan yang tidak sepenuhnya sesuai harapan, di mana pertunjukan minim dan banyak pidato dari pemimpin dan politikus,” ujar Arya. Setelah pembukaan resmi, para peserta harus mengatasi tantangan berupa cuaca yang panas dan lembab. </item>
        <item>Akibat serangan ISIS yang dilancarkan kepada pasukan pemerintah Suriah, jumlah korban tewas telah meningkat menjadi 33 tentara. Data terbaru serangan ISIS ini menggantikan angka sebelumnya yang mencatat 23 jiwa yang hilang akibat insiden tersebut. Kantor berita AFP melaporkan pada Sabtu (12/8/2023) bahwa Observatorium Suriah untuk Hak Asasi Manusia menginformasikan bahwa insiden penembakan yang terjadi pada Kamis (10/8) malam waktu setempat. Di mana sebuah bus tentara Suriah menjadi sasaran. Menjadikan serangan ISIS paling fatal yang dilakukan terhadap pasukan pemerintah dalam tahun ini.</item>
        <item>Amadeo Yesa menjadi peraih nilai UTBK tertinggi di SNBT 2023. Mengantongi nilai 827,94, Deo diterima di Departemen Teknik Informatika Institut Teknologi Sepuluh Nopember (ITS). Pemuda kelahiran Surabaya, 25 Juli 2005 ini menuturkan, pencapaiannya tidak lepas dari dukungan orang tua dan para guru di sekolahnya, SMA Katolik Rajawali Makassar./</item>
        <item>Kabupaten Sumenep, Jawa Timur tak hanya terkenal dengan keindahan pantai dan budayanya, tetapi juga menyimpan beragam destinasi wisata yang memikat. Salah satunya Wisata Mangrove Kedatim.\nTerletak di Desa Kebundadap timur, Saronggi, Sumenep, Jawa Timur, tempat ini telah menjadi daya tarik para wisatawan, baik dari dalam maupun luar kota. Selain menawarkan keindahan alam yang mengagumkan, Wisata Mangrove Kedatim juga telah diakui dan dinobatkan menjadi juara dalam lomba Desa Wisata Nusantara tahun 2022 lalu.\nWisata ini menawarkan pemandangan mempesona dengan suasana hutan mangrove yang hijau dan asri. Pohon bakau yang menjulang tinggi, akar-akar yang menjalar, serta kicauan burung, memancarkan kedamaian untuk dinikmati dengan tenang.</item>
        <item>Sebuah video viral di media sosial menampilkan aksi bejat seorang kakek-kakek melecehkan bocah SD di Jakarta Timur. Pihak kepolisian sendiri sudah berhasil menangkap pelaku. \nDalam akun Instagram @lensa_berita_jakarta, sebuah video menampilkan aksi bejat kakek-kakek yang meraba dada bocah berseragam SD. Aksi tersebut dilakukan di sebuah gang.\nMasih dalam akun tersebut, ada pula video di lokasi lain yang memperlihatkan aksi kakek tersebut. Di lokasi berbeda, Kakek tersebut terlihat melecehkan bocah berseragam SD.</item>
        <item>Aktor Billy Porter mengaku ingin menjual rumahnya karena khawatir keuangannya menipis, buntut dari aksi mogok kerja yang dilakukan aktor dan penulis skenario Hollywood. Pemeran musikal Cinderella (2021) itu mengatakan, aksi mogok kerja tersebut akan membuat ketidakpastian keuangan terhadap para pekerja seni, terutama di industri perfilman. “Saya harus menjual rumah saya. Dan saya tidak tahu kapan kita akan kembali (bekerja),” ungkap dia dilansir NME. “Kehidupan seorang seniman, sampai kamu menghasilkan banyak uang. Saya seharusnya berada di film baru dan di acara televisi baru mulai September. Semua itu tidak terjadi. Jadi, kepada orang yang mengatakan "kita akan membuat mereka kelaparan sampai mereka harus menjual apartemen mereka," ya kamu telah membuat saya kelaparan,” lanjut dia. Belasan aktor terkenal telah bergabung ke aksi mogok kerja aktor Hollywood, termasuk Bryan Cranston, Kevin Bacon, Susan Sarandon, Awkwafina, Paul Dano dan Olivia Wilde. Will Smith juga baru-baru ini mengatakan bahwa aksi mogok kerja merupakan momen penting bagi profesi aktor. Sementara, Dwayne Johnson telah memberikan sumbangan dana yang besar untuk aksi mogok kerja tersebut.</item>
        <item>Ketua Umum Partai Gerindra, Prabowo Subianto, mendapat dukungan dari PAN dan Golkar untuk bertarung di Pilpres 2024 mendatang. Prabowo pun bertekad tak akan mengecewakan harapan partai-partai yang mendukungnya. Sebelumnya, Prabowo telah mendapat dukungan dari PKB. Dengan masuknya PAN dan Golkar, kini ada 4 partai yang mendukung Prabowo. "Ini sungguh suatu kehormatan bagi saya, yang juga membuat saya bertekad untuk tidak mengecewakan harapan partai-partai ini, terutama harapan rakyat Indonesia semuanya," kata Prabowo saat memberikan sambutan dalam acara deklarasi Golkar, PAN, PKB, dan Gerindra yang mendukung bakal calon presiden Prabowo Subianto di Museum Naskah Proklamasi, Jakarta, Minggu (13/8/2023).</item>
        <item>Direktorat Lalu Lintas Polda Metro Jaya mengamini jika kemacetan di Ibu Kota DKI Jakarta semakin parah. Jika dijadikan persentase indeks, kemacetan Jakarta saat ini sudah mencapai 53 persen, padahal targetnya harus di bawah 50 persen. "Memang indeks kemacetan pada saat ini adalah sudah cukup tinggi," kata Direktur Lalu Lintas Polda Metro Jaya Kombes Pol Latif Usman kepada wartawan, Sabtu (12/8/2023). Jika dilihat indeks kemacetan, Latif menyebut Jakarta sudah menyentuh angka 53 persen. Sedangkan polisi berupaya untuk menurunkan indeks kemacetan di Jakarta menjadi 50 persen. "Coba lihat pada saat Covid, hitungannya 35 (persen) ya, kan begitu karena memang aktivitas ini. Jadi memang harapannya jangan sampai lebih dari pada 50 persen," ucap Latif.</item>
        <item>Seorang model bernama Victoria Matosa, mengalami kondisi langka yang disebut lipoedema. Penyakit ini membuat bagian paha Victoria membesar, sehingga tidak sinkron dengan tubuh bagian atasnya. Dikutip dari The Sun, wanita asal Rio de Janeiro, Brazil itu didiagnosis mengidap lipoedema pada Februari 2023 lalu. Lipoedema adalah penyakit yang menyebabkan timbunan lemak abnormal menumpuk secara tidak merata di dalam tubuh dan tidak ada obatnya. Mulanya, Victoria mengalami nyeri begitu hebat di bagian kakinya yang bengkak dan meradang. Dia bahkan merasakan sakit di bagian lututnya.</item>
        <item> Menteri Pariwisata dan Ekonomi Kreatif (Menparekraf), Sandiaga Uno, terus memperlihatkan komitmen kuatnya terhadap pengembangan sektor pariwisata di Indonesia. Sebagai bagian dari upaya mendukung perkembangan usaha pariwisata, membuka lebih banyak peluang lapangan pekerjaan, dan ekonomi lokal bangkit, Sandiaga Uno memberikan bantuan Dukungan Pengembangan Usaha Pariwisata (DPUP) senilai Rp 120 juta rupiah kepada 5 desa wisata di Jawa Barat. Berkolaborasi dengan Gerakan Masyarakat Wirausaha (Gemawira) dan UMKM Sahabat Sandi Uno Kabupaten Bandung, Menparekraf Sandiaga Uno memberikan langkah nyata dalam mewujudkan visi pengembangan pariwisata yang berkelanjutan dan inklusif, sehingga 4,4 juta lapangan pekerjaan bisa tercipta. "Desember 2020 keadaan pariwisata dalam keadaan yang sangat memprihatinkan. Salah satu inovasi kami saat itu saya berkunjung ke Desa Alamendah yaitu untuk pengembangan desa wisata," kata Sandiaga, Jumat (11/8/2023). "Alhamdulillah di Desa Wisata Alamendah setelah 2 tahun kunjungan, wisatawan meningkat, lapangan kerja tercipta, sehingga tahun lalu secara kolektif 2,6 juta lapangan kerja baru tercipta, nah tahun depan targetnya 4,4 juta lapangan kerja," lanjut Sandiaga.</item>
    </string-array>
    <string-array name="list_news_image">
        <item>@drawable/penutupan_jambore</item>
        <item>@drawable/serangan_isis</item>
        <item>@drawable/amadeo_mahasiswa</item>
        <item>@drawable/hutan_mangrove</item>
        <item>@drawable/berita_jakarta</item>
        <item>@drawable/img</item>
        <item>@drawable/img_1</item>
        <item>@drawable/img_3</item>
        <item>@drawable/img_2</item>
        <item>@drawable/img_4</item>
    </string-array>
</resources>