<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNewsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/news_title"
            android:maxLines="2"
            android:textAlignment="center"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/imgNews"
            card_view:layout_constraintTop_toBottomOf="@+id/imgNews"
            card_view:layout_editor_absoluteY="100dp" />

        <TextView
            android:id="@+id/tvBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="8sp"
            android:text="@string/by"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvNewsTitle"
            card_view:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/tvNewsWriter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/penulis"
            android:textSize="8sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/tvBy"
            card_view:layout_constraintStart_toEndOf="@+id/tvBy"
            card_view:layout_constraintTop_toTopOf="@+id/tvBy"
            card_view:layout_editor_absoluteX="20dp"
            card_view:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/tvNewsDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            android:textSize="8sp"
            card_view:layout_constraintStart_toEndOf="@+id/tvNewsWriter"
            card_view:layout_constraintTop_toTopOf="@+id/tvNewsWriter"
            card_view:layout_editor_absoluteX="60dp"
            card_view:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/tvNewsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="3"
            android:textSize="11sp"
            android:text="@string/description"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvNewsWriter"
            card_view:layout_editor_absoluteY="140dp" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>