<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    tools:context=".DetailNewsActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgDetailNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/hutan_mangrove" />

        <TextView
            android:id="@+id/tvDetailNewsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="35sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/imgDetailNews"
            card_view:layout_constraintTop_toBottomOf="@+id/imgDetailNews"
            card_view:layout_editor_absoluteY="100dp" />

        <TextView
            android:id="@+id/tvDetailNewsWriter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penulis"
            android:textSize="15sp"
            card_view:layout_constraintHorizontal_chainStyle="packed"
            card_view:layout_constraintEnd_toStartOf="@id/tvDetailNewsDate"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDetailNewsTitle"
            card_view:layout_editor_absoluteX="20dp"
            card_view:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/tvDetailNewsDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            android:textSize="15sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvDetailNewsWriter"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDetailNewsTitle"
            card_view:layout_editor_absoluteX="60dp"
            card_view:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/tvDetailNewsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:text="@string/description"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDetailNewsWriter"
            card_view:layout_editor_absoluteY="140dp" />

        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>